<?xml version="1.0"?>
<package format="3">
  <name>particle_filter</name>
  <version>0.1.0</version>
  <description>Particle Filter Localization using RangeLibc for accelerated ray casting.</description>

  <maintainer email="jeongsangryu@gmail.com">jeongsangRyu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>lifecycle_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>gflags</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
